--- a/frontend-angular/package.json
+++ b/frontend-angular/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "ag-grid-angular": "^31.0.1",
+    "ag-grid-community": "^31.0.1",
     "bootstrap": "^5.3.2",
+    "highcharts": "^11.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
