--- a/backend-nodejs/package.json
+++ b/backend-nodejs/package.json
@@ -14,6 +14,8 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "highcharts": "^11.2.0",
+    "highcharts-angular": "^4.0.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
